--- a/render.yaml
+++ b/render.yaml
@@ -9,9 +9,10 @@ services:
     autoDeploy: false
     envVars:
       - key: DATABASE_URL
-        fromDatabase:
-          name: replace-with-your-postgres-instance-name
-          property: connectionString
+        sync: false
+        # fromDatabase:
+        #   name: replace-with-your-postgres-instance-name
+        #   property: connectionString
       # pick the region closest to your database
       # For example, us-west-2 for the Oregon region
       - key: AWS_REGION
